Changes for 2.2.11rc1

New features:
A.F....... [ZBX-1357] updated Czech, Italian and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-9643] fixed value passing to action message from user defined macros (viktors)
........S. [ZBX-7511] removed trimming of leading and trailing spaces in SNMP strings (gleb)
...G...... [ZBX-8899] fixed retrieval of sensor readings on Linux 2.6 and higher (gleb, wiper)
...G...... [ZBX-9917] fixed log message when opening windows eventlog (wiper)
.......PS. [ZBX-9855] fixed SNMP dynamic index cache refresh when SNMP OID changes (dimir)
...G...... [ZBX-9740] improved proc.num for protected Windows processes (gleb)
.......PS. [ZBX-9793] fixed handling of opaque types in SNMP (asaveljevs)
.......PS. [ZBX-9895] fixed memory leak in case of unsupported field type while processing configuration received over proxy protocol (Sandis)
........S. [ZBX-9858] added error message logging when SNMP trapper file size exceeds 2GB (wiper)
.......PS. [ZBX-9666] fixed invalid SNMP dynamic index cache if 2 SNMP agents have the same IP, port and OID (dimir, igors, Sandis)
...G...... [ZBX-9796] fixed return argument for NetBSD and HP-UX; remove extra semicolon (dimir, viktors)
...G...... [ZBX-9430] fixed Windows eventlog item incorrectly interpreting 0x00000103 return value as an error (wiper)
.......PS. [ZBX-9655] fixed crash if MYSQL connection object initialization failed (wiper)
........S. [ZBX-9667] fixed disabled triggers or trigers having disabled hosts or items affecting trigger dependency calculations (wiper)
A......... [ZBX-9738] fixed deletion of related action operations when deleting a host group (Gunars)
.......PS. [ZBX-9668] improved handling of VMware performance counter instances without data (wiper)
........S. [ZBX-9677] fixed compilation warnings in the escalator.c module (igors)
...G...PS. [ZBX-9682] fixed parsing of the numeric item key parameters (igors)